--- a/slideshow.html
+++ b/slideshow.html
@@ -1,11 +1,23 @@
 <!--I need for IE to render this page in querks mode because it doesn't handle this page well in standards compliance mode (unlike most other browsers)-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M88SN92');</script>
+<!-- End Google Tag Manager -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Image Selector</title>
+<meta name="robots" content="noindex,follow"/>
 <link href="slideshow.css" rel="stylesheet" type="text/css">
 </head>
 <body onLoad="javascript:startSlideshow();" onResize="javascript:resize();">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M88SN92"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <a href="#" id="infoBar" onMouseOver="javascript:closeBtn.src='close-hover.gif';" onMouseOut="javascript:closeBtn.src='close.gif';"><img src=close.gif id="closeBtn" style="position: absolute; right: 0px; border: 0px none;" onClick="closeInfoBar();" title="Close This Bar" alt="Close This Bar"><span onClick="javascript:location.href='http://www.browsehappy.com/'">Notice:&nbsp; This site uses advanced features of the HTML specification which are not supported by Internet Explorer, including alternate stylesheets, JavaScript timers, and PNG alpha transparency.&nbsp; In order to experience Image Selector to its fullest extent, I recommend you switch to a more standards-compliant browser.&nbsp; To find more information about standard-compliant browsers, including how to switch, click here.</span></a>
 <div id=imageWrapper><img src="blank.gif" height="225" width="1" align="absbottom" alt=""><span id=image onClick="javascript:loadImage();">Loading...</span><img src="blank.gif" height="225" width="1" align="absbottom" alt="">
   <div id=descriptionWrapper><a href="javascript:firstImage();" title="First Image" class=actualLink><img src=first.gif alt="First Image"></a><a href="javascript:previousImage();" title="Previous Image" class=actualLink><img src=previous.gif alt="Previous Image"></a><span id=description onClick="javascript:loadImage();">If an image does not display here by the time this page has loaded, please enable JavaScript.</span><a href="javascript:nextImage();" title="Next Image" class=actualLink><img src=next.gif alt="Next Image"></a><a href="javascript:lastImage();" title="Last Image" class=actualLink><img src=last.gif alt="Last Image"></a></div>
